--- a/src/aimodule/package.xml
+++ b/src/aimodule/package.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>joy_cli</name>
-  <version>0.0.1</version>
-  <description>The joy_cli package</description>
+  <name>aimodule</name>
+  <version>0.0.0</version>
+  <description>The aimodule package responsable for taking decisions</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="alpetrov@student.ethz.ch">Aleksandar Petrov</maintainer>
+  <maintainer email="ne@cegeka.com">enicky</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/joy-cli</url> -->
+  <!-- <url type="website">http://wiki.ros.org/aimodule</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -51,13 +51,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>duckietown_msgs</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>Adafruit_PCA9685</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_export_depend>duckietown_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>Adafruit_PCA9685</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>duckietown_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>Adafruit_PCA9685</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
