--- a/src/duckietown_msgs/CMakeLists.txt
+++ b/src/duckietown_msgs/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
+  ActionCmd.msg
   CarControl.msg
   CoordinationSignal.msg
   CoordinationSignalETHZ17.msg
