--- a/src/aimodule/package.xml
+++ b/src/aimodule/package.xml
@@ -52,6 +52,8 @@
   <build_depend>duckietown_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+
   <build_export_depend>duckietown_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
