--- a/src/duckietown_msgs/package.xml
+++ b/src/duckietown_msgs/package.xml
@@ -25,7 +25,6 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
-  <run_depend>opencv2</run_depend>
-
+  <run_depend>OpenCV2</run_depend>
 
 </package>
